2007-09-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/text.py (break_lines):
	Fix line length calculations.

2007-09-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.common-error.in:
	Add "re" to "Spaces around apostrophes".

	* gaupol/agents/text.py:
	Add break_lines and remove old crap.

	* gaupol/agents/util.py (get_liner):
	New method, equivalent to get_parser.

	* gaupol/liner.py (__init__):
	Add missing clean_func keyword argument.

2007-08-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/liner.py:
	Rewrite to use arbitrary break patterns.
	Clean up code and add comments.

2007-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.line-break.conf:
	* data/patterns/Latn-en.line-break.in:
	* data/patterns/Latn.line-break.conf:
	* data/patterns/Latn.line-break.in:
	New preliminary files for line-break patterns.

	* gaupol/patternman.py (get_patterns):
	Allow patterns with a more specific code to override those with a less
	specific code if the names clash.

2007-08-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/py2exe.bat:
	Copy DLLs from %GTKDIR%\bin.

2007-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/transform.py:
	Do not use DOWNWARDS ARROW WITH CORNER LEFTWARDS in text labels,
	instead strip tags and join lines with spaces.

	* gaupol/gtk/ruler.py (_Ruler):
	Use gaupol.re_any_tag.

	* gaupol/__init__.py:
	Add gaupol.re_any_tag.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (on_select_video_file_activate):
	Fix ``GtkWarning: gtk_file_system_win32_get_parent: assertion
	`g_path_is_absolute (filename)' failed'' on Windows.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol:
	Fix errors in previous commit.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol (prepare_paths):
	Refactor as with py2exe __file__ is not available.

	* data/icons/gaupol.ico:
	New icon for Windows.

	* doc/RELEASING.win32:
	New release checklist file.
