@@ -26,4 +26,7 @@ Unscheduled Possible Plans
     - gtk.AboutDialog: "name" replaced with "program-name"
     - gtk.Builder: Build an interface from an XML UI definition
     - gtk.Tooltip: New API that allows complex tooltips
+ * Rewrite some gaupol.gtk.View related code so that columns could be
+   added, e.g. by plugins; requires columns to not be identified by
+   their indexes, but rather by a TreeViewColumn GObject property (?)
  * Built-in GStreamer preview (as plugin?)
